Se hicieron vistas de ejemplo

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,10 +6,10 @@
     </header>
     <nav id="nav">
         <ul>
-            <li><a href="#one" class="active" onclick="sayhello()">Inicio</a></li>
-            <li><a href="#two">Recetas</a></li>
-            <li><a href="#three">Galeria</a></li>
-            <li><a href="#four">Contacto</a></li>
+            <li><a id="main-a" href="/main" >Inicio</a></li>
+            <li><a id="recipes-a" href="/recipes">Recetas</a></li>
+            <li><a id="contact-a" href="/contact">Contacto</a></li>
+            <li><a id="admin-a" href="/admin">Admin</a></li>
         </ul>
     </nav>
     <footer>
