--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,115 +28,16 @@
 				</div>
 			</section>
 
-			<!-- Two -->
-			<section id="two">
-				<div class="container">
-					<h3>Things I Can Do</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia
-						elementum integer lorem ipsum dolor sit amet.</p>
-					<ul class="feature-icons">
-						<li class="fa-code">Write all the code</li>
-						<li class="fa-cubes">Stack small boxes</li>
-						<li class="fa-book">Read books and stuff</li>
-						<li class="fa-coffee">Drink much coffee</li>
-						<li class="fa-bolt">Lightning bolt</li>
-						<li class="fa-users">Shadow clone technique</li>
-					</ul>
-				</div>
-			</section>
-
-			<!-- Three -->
-			<section id="three">
-				<div class="container">
-					<h3>A Few Accomplishments</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia
-						elementum integer. Integer eu ante ornare amet commetus.</p>
-					<div class="features">
-						<article>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Possibly broke spacetime</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-							</div>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Terraformed a small moon</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-							</div>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Snapped dark matter in the wild</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-							</div>
-						</article>
-					</div>
-				</div>
-			</section>
-
-			<!-- Four -->
-			<section id="four">
-				<div class="container">
-					<h3>Contact Me</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia
-						elementum integer. Integer eu ante ornare amet commetus.</p>
-					<form method="post" action="#">
-						<div class="row uniform">
-							<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-						</div>
-						<div class="row uniform">
-							<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-						</div>
-						<div class="row uniform">
-							<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-						</div>
-						<div class="row uniform">
-							<div class="12u">
-								<ul class="actions">
-									<li><input type="submit" class="special" value="Send Message" /></li>
-									<li><input type="reset" value="Reset Form" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-				</div>
-			</section>
-
 
 		</div>
 
 		<!-- Footer -->
-		<section id="footer">
-			<div class="container">
-				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section>
+		<%- include footer.ejs %>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
-	<script>
-		function sayhello() {
-			console.log('HELLO');
-		}
-		
-		$('#nav ul a').on('click', function(e){
-			$('#nav ul a').removeClass('active');
-			$(e.target).toggleClass('active');
-		});
-	</script>
+    <%- include scripts.ejs %>
 </body>
 
 </html>
