--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
     <header>
         <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
         <h1 id="logo"><a href="#">Belu's bakery</a></h1>
-        <p>Tortas, bombones, mesas dulces y más</p>
+        <p>Pastelería</p>
     </header>
     <nav id="nav">
         <ul>
