--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,13 +17,11 @@
 			<section id="one">
 				<div class="container">
 					<header class="major">
-						<h2>Read Only</h2>
-						<p>Just an incredibly simple responsive site<br /> template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						<h2>Belu's bakery</h2>
+						<p>Tortas, bombones, mesas dulces y mucho más</p>
 					</header>
-					<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan
-						erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc
-						integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia
-						elementum.
+					<p>En Belu's bakery nos especializamos en pastelería artesanal y servicios de catering. Realizamos entregas
+                    a domicilio en zona norte. 
 					</p>
 				</div>
 			</section>
