--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,17 +16,15 @@
 			<!-- Two -->
 			<section id="one">
 				<div class="container">
-					<h3>Things I Can Do</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia
-						elementum integer lorem ipsum dolor sit amet.</p>
-					<ul class="feature-icons">
-						<li class="fa-code">Write all the code</li>
-						<li class="fa-cubes">Stack small boxes</li>
-						<li class="fa-book">Read books and stuff</li>
-						<li class="fa-coffee">Drink much coffee</li>
-						<li class="fa-bolt">Lightning bolt</li>
-						<li class="fa-users">Shadow clone technique</li>
-					</ul>
+					<h3>Administracion</h3>
+					<p>Administra el contenido del sitio web.</p>
+                    
+                    <form action="/image" method="POST" enctype="multipart/form-data" >
+                        <input type="text" name="name" placeholder="Nombre" />
+                        <input type="file" name="image" id="image-input" />
+                        <input type="submit" value="Subir" />
+                    </form>
+                    
 				</div>
 			</section>
 
