--- a/views/admin-header.ejs
+++ b/views/admin-header.ejs
@@ -6,10 +6,10 @@
     </header>
     <nav id="nav">
         <ul>
-            <li><a id="main-a" href="/main" >Inicio</a></li>
-            <li><a id="recipes-a" href="/recipes">Recetas</a></li>
-            <li><a id="contact-a" href="/contact">Contacto</a></li>
-            <li><a id="admin-a" href="/admin">Admin</a></li>
+            <li><a id="main-a" href="/main" >Volver</a></li>
+            <li><a id="image-upload-a" href="/admin/image/upload">Subir imagen</a></li>
+            <li><a id="image-delete-a" href="/admin/image/delete">Eliminar imagen</a></li>
+            <li><a id="board-edit-a" href="/admin/board">Modificar principal</a></li>
         </ul>
     </nav>
     <footer>
