--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,8 +1,8 @@
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/skel.min.js"></script>
-<script src="assets/js/util.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/js/skel.min.js"></script>
+<script src="/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="assets/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 <div id="selected-div" style="display:none"><%= selected %></div>
 <script>
     var selected = $('#selected-div').text();
